pyinterp/pyinterp/pyinterp/tests/must_pass/builtins/list/errors/index_not_in_list.py
lst = [1, "foo", False]

print(lst.index(2))